cabal-version: 3.8
name:
  aoc

version:
  0.1.0.0

common common-options
  default-language: GHC2021
  ghc-options:
    -O2
    -Wall

  build-depends:
    base ^>=4.18.0.0

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Days.Day01
    Days.Day02

  build-depends:
    base

executable aoc
  import: common-options
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    aoc,
    base,
