cabal-version: 3.8
name:
  aoc

version:
  0.1.0.0

common common-options
  default-language: GHC2021
  ghc-options:
    -O2
    -Wall

  build-depends:
    base ^>=4.18.0.0,
    split ^>=0.2.5,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Days.Day01
    Days.Day02
    Days.Day03
    Days.Day04

  build-depends:
    base,
    split,

executable aoc
  import: common-options
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    aoc,
    base,
    split,
